--- a/CSLox/Stmt.tt
+++ b/CSLox/Stmt.tt
@@ -37,6 +37,12 @@
             }
         },
         {
+            "Return", new List<KeyValuePair<string, string>>{
+                new KeyValuePair<string, string>("Token", "Keyword"),
+                new KeyValuePair<string, string>("Expr?", "Value")
+            }
+        },
+        {
             "Var", new List<KeyValuePair<string, string>>{
                 new KeyValuePair<string, string>("Token", "Name"),
                 new KeyValuePair<string, string>("Expr?", "Initializer")
