--- a/CSLox/Expr.tt
+++ b/CSLox/Expr.tt
@@ -33,6 +33,12 @@
             }
         },
         {
+            "Function", new List<KeyValuePair<string, string>>{
+                new KeyValuePair<string, string>("List<Token>", "Params"),
+                new KeyValuePair<string, string>("List<Stmt>", "Body")
+            }
+        },
+        {
             "Call", new List<KeyValuePair<string, string>>{
                 new KeyValuePair<string, string>("Expr", "Callee"),
                 new KeyValuePair<string, string>("Token", "Paren"),
