--- a/CSLox/Stmt.tt
+++ b/CSLox/Stmt.tt
@@ -13,6 +13,12 @@
             }
         },
         {
+            "Class", new List<KeyValuePair<string, string>>{
+                new KeyValuePair<string, string>("Token", "Name"),
+                new KeyValuePair<string, string>("List<Stmt.Function>", "Methods")
+            }
+        },
+        {
             "Expression", new List<KeyValuePair<string, string>>{
                 new KeyValuePair<string, string>("Expr", "Expr")
             }
