methods on class done, This partly done.

--- a/CSLox/Expr.tt
+++ b/CSLox/Expr.tt
@@ -27,6 +27,11 @@
             }
         },
         {
+            "This", new List<KeyValuePair<string, string>>{
+                new KeyValuePair<string, string>("Token", "Keyword")
+            }
+        },
+        {
             "Unary", new List<KeyValuePair<string, string>>{
                 new KeyValuePair<string, string>("Token", "Operator"),
                 new KeyValuePair<string, string>("Expr", "Right")
